Add ability to retract vote

--- a/polls/templates/polls/generic_message.html
+++ b/polls/templates/polls/generic_message.html
@@ -17,7 +17,8 @@
 
                 {% block return %}
                     <p class="card-text"><a href="{% url 'poll_list' %}" class="btn btn-primary">Return to List
-                        Polls</a></p>{% endblock %}
+                        Polls</a></p>
+                {% endblock %}
             </div>
         </div>
     </div>
