--- a/polls/templates/polls/poll_locked.html
+++ b/polls/templates/polls/poll_locked.html
@@ -1,7 +1,7 @@
 <!-- polls/templates/poll_closed.html -->
 {% extends "polls/generic_message.html" %}
 
-{% block title %}Poll Closed{% endblock %}
+{% block title %}Голосование окончено{% endblock %}
 {% block icon %}🔒{% endblock %}  {# Lock icon for closed poll #}
 {% block icon_color %}#808080{% endblock %}  {# Gray color for lock icon #}
-{% block message %}This poll is closed for voting.{% endblock %}
+{% block message %}{% endblock %}
