--- a/polls/templates/polls/vote_details.html
+++ b/polls/templates/polls/vote_details.html
@@ -12,11 +12,9 @@
         <tbody>
         {% for row in results %}
             <tr>
-                <th scope="row">{{ row.login }}</th>
-                {% for key,val in row.items %}
-                    {% if key != "login" %}
-                        <td>{{ val }}</td>
-                    {% endif %}
+                <th scope="row">{{ row.0 }}</th>
+                {% for val in row|slice:"1:" %}
+                    <td>{{ val }}</td>
                 {% endfor %}
             </tr>
         {% endfor %}
