--- a/polls/templates/polls/vote_ok.html
+++ b/polls/templates/polls/vote_ok.html
@@ -2,8 +2,8 @@
 
 {% extends "polls/generic_message.html" %}
 
-{% block title %}Vote Cast{% endblock %}
+{% block title %}Голос учтён{% endblock %}
 {% block icon %}🗳{% endblock %}  {# Ballot box icon for vote cast #}
 {% block icon_color %}#4CAF50{% endblock %}  {# Green color for ballot box icon #}
-{% block message %}Your vote has been cast. Thank you for participating! See you on
-    <a href="https://twitch.tv/iarspider"><i class="ba ba-twitch"></i> Stream</a>!{% endblock %}
+{% block message %}Ваш голос засчитан. Спасибо за участие и увидися на
+    <a href="https://twitch.tv/iarspider"><i class="ba ba-twitch"></i>стримах</a>!{% endblock %}
