--- a/polls/templates/polls/vote_add.html
+++ b/polls/templates/polls/vote_add.html
@@ -73,7 +73,8 @@
         <hr/>
         <p>Упорядочите игры перетаскиванием за <i class="bi bi-list"></i>: чем выше в
           списке игра, тем интереснее вам её увидеть. Уберите галочку у тех игр, которые
-          вам совершенно не интересны. {% if is_sub %} Вы можете увеличить вес вашего голоса (как положительного, так и отрицательного) за одну из игр, активировав переключатель ⭐ рядом с этой игрой. {% endif %}</p>
+            вам совершенно не интересны. </p>
+          {% if is_sub %}<p>Вы можете увеличить вес вашего голоса за или против одной из игр активировав переключатель ⭐ рядом с этой игрой. </p>{% endif %}
         <p>Используйте переключатели 🦉, 🧀 и/или 🐝, если вам в принципе всё равно что
           смотреть.</p>
         <hr/>
@@ -110,7 +111,7 @@
                 <div class="col-md-2 align-items-center d-none d-md-flex"><img
                   src="{{ game.logo_url }}"
                   alt="{{ game.name }}"
-                  class="img-fluid rounded-start">
+                  class="img-fluid rounded-start" style="max-width: 184px;">
                 </div>
               </div>
             </div>
