--- a/polls/templates/polls/poll_add.html
+++ b/polls/templates/polls/poll_add.html
@@ -24,7 +24,7 @@
                     <ul id="allGamesList" class="list-group">
                         {% for game in games %}
                             <li class="list-group-item" data-game-id="{{ game.id }}">
-                                <img src="{{ game.small_logo_url }}" alt="{{ game.name }} Logo" class="img-thumbnail">
+                                <img src="{{ game.small_logo_url }}" alt="{{ game.name }} Logo" class="img-thumbnail" style="max-width: 184px;">
                                 {{ game.name }}
                                 <button type="button" class="btn btn-primary btn-sm move-btn">Add</button>
                             </li>
