--- a/polls/templates/polls/poll_add.html
+++ b/polls/templates/polls/poll_add.html
@@ -24,7 +24,7 @@
                     <ul id="allGamesList" class="list-group">
                         {% for game in games %}
                             <li class="list-group-item" data-game-id="{{ game.id }}">
-                                <img src="{{ game.small_logo_url }}" alt="{{ game.name }} Logo" class="img-thumbnail">
+                                <img src="{{ game.small_logo_url }}" alt="{{ game.name }} Logo" class="img-thumbnail" style="max-width: 184px;">
                                 {{ game.name }}
                                 <button type="button" class="btn btn-primary btn-sm move-btn">Add</button>
                             </li>
@@ -45,7 +45,7 @@
                 <label for="start_date">Start Date/Time:</label>
                 <input type="datetime-local" class="form-control" id="start_date" name="start_date" required>
             </div>
-
+<!--
             <div class="form-group">
                 <label for="end_date">End Date/Time:</label>
                 <input type="datetime-local" class="form-control" id="end_date" name="end_date" required>
@@ -55,7 +55,7 @@
                 <label for="anonymous">Anonymous:</label>
                 <input type="checkbox" class="form-control" id="anonymous" name="anonymous" disabled>
             </div>
-
+-->
             <input type="hidden" aria-hidden="true" name="selectedIds"/>
             <button type="submit" class="btn btn-primary" id="submitBtn">Submit</button>
             <button type="button" class="btn btn-danger" id="resetBtn">Reset</button>
