Fix some styles

--- a/polls/templates/polls/poll_add.html
+++ b/polls/templates/polls/poll_add.html
@@ -43,19 +43,16 @@
 
             <div class="form-group mt-4">
                 <label for="start_date">Start Date/Time:</label>
-                <input type="datetime-local" class="form-control" id="start_date" name="start_date" required>
+                <input type="datetime-local" class="form-control" id="start_date" name="start_date" required disabled>
             </div>
-<!--
             <div class="form-group">
                 <label for="end_date">End Date/Time:</label>
-                <input type="datetime-local" class="form-control" id="end_date" name="end_date" required>
+                <input type="datetime-local" class="form-control" id="end_date" name="end_date" required disabled>
             </div>
-
             <div class="form-group">
                 <label for="anonymous">Anonymous:</label>
                 <input type="checkbox" class="form-control" id="anonymous" name="anonymous" disabled>
             </div>
--->
             <input type="hidden" aria-hidden="true" name="selectedIds"/>
             <button type="submit" class="btn btn-primary" id="submitBtn">Submit</button>
             <button type="button" class="btn btn-danger" id="resetBtn">Reset</button>
