--- a/polls/templates/polls/poll_toggle_lock.html
+++ b/polls/templates/polls/poll_toggle_lock.html
@@ -7,7 +7,7 @@
 {% block icon_color %}#FFD700{% endblock %}
 {% block return %}{% endblock %}
 {% block message %}Are you sure you want to {{ action|lower }} poll "{{ poll_title }}"?
-    <div class="mt-3">
+    <div class="mt-3 d-flex justify-content-center gap-2">
         <form method="post" action="{% url 'poll_toggle_lock' poll_id %}">
             {% csrf_token %}
             <button type="submit" class="btn btn-primary">Confirm</button>
